--- a/Les 01/oefening-01 en 03.html
+++ b/Les 01/oefening-01 en 03.html
@@ -16,6 +16,7 @@
             23/12/2002
             <br>
             Nederlands
+            <a href="http://www.thomasmore.be/">Bezoek Thomasmore.be</a>
         </p>
     </body>
 
