--- a/Les 01/oefening-04_informatie.html
+++ b/Les 01/oefening-04_informatie.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="author" content="Jorden Dillen">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Oefening 1 - Kennismaking</title>
@@ -9,15 +10,7 @@
 
     <body>
         <p>
-            Jorden Dillen
-            <br>
-            Geel
-            <br>
-            23/12/2002
-            <br>
-            Nederlands
-            <a href="http://www.thomasmore.be/">Bezoek Thomasmore.be</a>
+            informatie
         </p>
     </body>
-
-</html>
+    </html>
