--- a/Les 02/Les_02_Oefening_6.html
+++ b/Les 02/Les_02_Oefening_6.html
@@ -10,32 +10,35 @@
 
 <body>
     <img src="img/weekplanner.gif" alt="weekplanner tittel" width="100%" />
-    <ul>
+    <ol>
         <li>Maandag
-            <ol>1.cisco</ol>
-            <ol>2.c#
-                <ol>
+            <ol>
+            <li>cisco</li>
+            <li>c#
+                <ul>
                     <li>
                         Canvas nakijken
                     </li>
-                </ol>
-            </ol>
-
+                </ul>
+            </li>
+        </ol>
         </li>
         <li>dinsdag</li>
         <li>woensdag
-            <ol>1.engels
-                <ol>
+            <ol>
+                <li>engels
+                <ul>
                     <li>Woordenboek!</li>
                     <li>Cursus afhalen</li>
-                </ol>
-            </ol>
-            <ol>c#</ol>
-            <ol>Statische websites</ol>
+                </ul>
+            </li>
+            <li>c#</li>
+            <li>Statische websites</li>
+        </ol>
         </li>
         <li>Donderdag</li>
         <li>Vrijdag</li>
-    </ul>
+    </ol>
 </body>
 
 </html>
