--- a/Project/index.html
+++ b/Project/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>les 03 - Oef 3</title>
-    <meta name="author" content="Jorden Dillen">
+    <title>Project</title>
 </head>
 <body>
-    <h1>Oefening 3</h1>
-
+    Welkom op de pagina van Jorden Dillen
 </body>
 </html>
