--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
 </head>
+
 <body>
-    Welkom op de pagina van Jorden Dillen
+    <nav><p><a href="Index.html">Home</a> <a href="curriculumvitae.html">Curriculum Vitae</a> <a href="ervaring.html">Ervaring</a> <a href="hobbyies.html">hobbies</a> <a href="contact.html">Contact</a></p>
+    </nav>  
 </body>
+<h1>Portfolio Jorden Dillen</h1>
+<body><img src="img/foto Jorden Dillen.jpg" alt="Fotojorden"></p></body>
+<p>Ik ben jorden dillen. ik studeer momenteel Systeem en netwerkbeheer te geel.</p>
+<p>Voor mijn CV <a href="curriculumvitae.html"><b>Klik hier</b></a>. </p>
+<p>Voor meer informatie rond mijn hobbies <a href="hobbies.html"><b>Klik hier</b></a>.</p>
+
+<h4>Positieve Punten</h4>
+<p>Leergierig</p>
+<p>Geduldig</p>
+<p>Zelfstandig</p>
+<h4>Negatieve Punten</h4>
+<p>Uitstel gedrag</p>
+<p>Slordig</p>
+<p>Snel afgeleid</p>
+
+
+<h4>Om mij te contacteren klik <a href="Contact.html"><b>Klik hier</b></a>. </h4>
 </html>
