--- a/Project/curriculumvitae.html
+++ b/Project/curriculumvitae.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Project</title>
 </head>
 
 <body>
-    <nav><p><a href="Index.html">Home</a> <a href="curriculumvitae.html">Curriculum Vitae</a> <a href="ervaring.html">Ervaring</a> <a href="hobbies.html">hobbies</a> <a href="contact.html">Contact</a></p>
-    </nav>  
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#"><img src="img/afbeelding navbar.jpg" width="30px" height="30px"></a>
+            <ul class="nav navbar-nav navbar-right"></a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="curriculumvitae.html">Curriculum Vitae</a></li>
+            <li><a href="ervaring.html">Ervaring</a></li>
+            <li><a href="hobbies.html">hobbies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>  
 </body>
 <table style="width: 100%;" border="1" cellspacing="0" cellpadding="0">
     <tr>
