--- a/Project/test.html
+++ b/Project/test.html
@@ -4,29 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" id="bootstrap-css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Project</title>
 </head>
 
-<body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#"><img src="img/afbeelding navbar.jpg" width="30px" height="30px"></a>
-            <ul class="nav navbar-nav navbar-right"></a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="curriculumvitae.html">Curriculum Vitae</a></li>
-            <li><a href="ervaring.html">Ervaring</a></li>
-            <li><a href="hobbies.html">hobbies</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </nav> 
-</body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#"><img src="img/afbeelding navbar.jpg" width="30px" height="30px"></a>
+        <ul class="nav navbar-nav navbar-right"></a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a href="Index.html">Home</a></li>
+        <li><a href="curriculumvitae.html">Curriculum Vitae</a></li>
+        <li><a href="ervaring.html">Ervaring</a></li>
+        <li><a href="hobbyies.html">hobbies</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 <h1>Portfolio Jorden Dillen</h1>
 <body><img src="img/foto Jorden Dillen.jpg" alt="Fotojorden"></p></body>
 <p>Ik ben jorden dillen. ik studeer momenteel Systeem en netwerkbeheer te geel.</p>
@@ -44,5 +42,4 @@
 
 
 <h4>Om mij te contacteren klik <a href="Contact.html"><b>Klik hier</b></a>. </h4>
-
 </html>
